Minor alignment fixes

--- a/css/style.css
+++ b/css/style.css
@@ -153,13 +153,12 @@ h2 {
   background: var(--color-border-popular);
 }
 
-ul {
+.features {
   list-style: none;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  margin-block-start: auto;
-  margin-block-end: auto;
+  margin: 0 1rem;
   font-size: clamp(1.5rem, 1.2rem + 1vw, 2.5rem);
 }
 
@@ -191,7 +190,7 @@ ul {
   cursor: pointer;
   transform: scale(1);
   transition: transform 0.3s ease-in-out;
-  margin-top: 1.5rem;
+  margin-top: 2rem;
 }
 
 .btn:hover,
